# realityhack.world-backend

./: .coveragerc  .dockerignore  .env.example  .flake8  .gitignore  .woodpecker.yml  Cargo.toml  Dockerfile  Dockerfile.fly  LICENSE  README.md  build-image.sh  buildings_rooms_tables.csv  docker-compose.dev.yml  docker-compose.yml  fly.production.toml  fly.toml  manage.py  pyproject.toml  realityhack.code-workspace  requirements.txt  run-container.sh  rundeploy  runserver  test
event_server/: asgi.py  settings.py  urls.py  wsgi.py
infrastructure/: constants.py  consumers.py  email.py  event_context.py  factories.py  filters.py  industries.csv  keycloak.py  managers.py  middleware.py  mixins.py  models.py  qr_generator.py  routing.py  serializers.py  tests.py  views.py
infrastructure/migrations/: 0001_initial.py  0002_alter_application_communications_platform_username.py  0002_alter_attendee_options_and_more.py  0002_application.py  0002_remove_attendee_roles.py  0002_rename_role_attendee_roles.py  0003_alter_application_current_country_and_more.py  0003_alter_hardwaredevice_checked_out_to.py  0003_attendee_application_alter_application_gender.py  0003_rename_skills_attendee_skill_proficiencies_and_more.py  0004_alter_application_email_alter_attendee_application_and_more.py  0004_application_judge_invited_by_and_more.py  0004_attendee_created_at_attendee_updated_at_and_more.py  0004_remove_attendee_skill_proficiencies_and_more.py  0005_alter_application_nullable_fields.py  0005_alter_attendee_email.py  (+57 more)
keycloak_data/: realm-export.json
src/: main.rs
(+27 files in other folders)
